css/default.css
/* Template used for ListView Items*/
.listIconTextTemplate
{
    width: 100%;
    height: 70px;
    padding: 5px;
    overflow: hidden;
}

.listIconTextTemplate listIconTextItem-Image
{
    width: 60px;
    height: 60px;
    margin: 5px;                  
    float: left;                  
    margin-right:20px;            
                                  
}

.listIconTextItem .listIconTextItem-Detail
{
    margin: 5px;
}     

.listLayoutHeaderTemplate, .listLayoutHeaderTemplate {
    font-size: larger;
    margin-left: 16px;
}          

.listView
{
    height: 800px;
}

                      

